--- a/index.html
+++ b/index.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
 
-    <style>
-      body {
-        font-family: "Lato", sans-serif;
-      }
-    </style>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
 
-    <title>Document</title>
-  </head>
-  <body class="px-10">
-    <nav class="flex items-center justify-between w-full">
-      <div>
-        <img src="/assets/logo.png" width="165" />
+  <style>
+    body {
+      font-family: "Lato", sans-serif;
+    }
+  </style>
+
+  <title>Document</title>
+</head>
+
+<body class="">
+  <nav class="flex items-center justify-between w-full px-10">
+    <div>
+      <img src="/assets/logo.png" width="165" />
+    </div>
+    <div class="flex items-center gap-x-5">
+      <a class="cursor-pointer text-[#555555] hover:text-black transition duration-300">About us</a>
+      <a class="cursor-pointer text-[#555555] hover:text-black transition duration-300">Contact us</a>
+      <a class="cursor-pointer text-[#555555] hover:text-black transition duration-300">Help & Support</a>
+    </div>
+  </nav>
+
+  <section class="w-full flex items-center h-[calc(100vh-80px)]">
+    <!-- Black overlay -->
+
+    <div class="w-1/3 h-full">
+      <img src="/assets/banner1.jpg" alt="" class="w-full h-full object-cover" />
+    </div>
+    <div class="w-2/3 h-full relative">
+      <div class="absolute inset-0 bg-black/50"></div>
+      <img src="/assets/banner2.jpg" alt="" class="w-full h-full object-cover" />
+
+      <div class="absolute inset-0 flex flex-col items-center justify-center text-center z-10 text-white px-4">
+        <h1 class="text-3xl font-bold mb-4">Cozy Up with Our Winter Sale!</h1>
+        <p class="mb-6">Shop warm essentials and seasonal favorites today.</p>
+        <button class="bg-white text-black px-6 py-2 rounded-lg font-medium hover:bg-gray-200 transition">
+          Shop Now
+        </button>
       </div>
-      <div class="flex items-center gap-x-5">
-        <a
-          class="cursor-pointer text-[#555555] hover:text-black transition duration-300"
-          >About us</a
-        >
-        <a
-          class="cursor-pointer text-[#555555] hover:text-black transition duration-300"
-          >Contact us</a
-        >
-        <a
-          class="cursor-pointer text-[#555555] hover:text-black transition duration-300"
-          >Help & Support</a
-        >
-      </div>
-    </nav>
-  </body>
+  </section>
+</body>
+
 </html>
