--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
   </nav>
 
-  <section class="w-full flex items-center h-[calc(100vh-80px)]">
+    <section class="w-full flex items-center h-[calc(100vh-80px)]">
     <!-- Black overlay -->
 
     <div class="w-1/3 h-full">
@@ -49,6 +49,55 @@
           Shop Now
         </button>
       </div>
+  </section>
+
+  <section class="px-10 grid grid-cols-4 gap-5 mt-20">
+     <div class="bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden hover:shadow-md transition-shadow">
+                <div class="aspect-square  p-6">
+                    <img src="/assets//products/1.jpg" 
+                         alt="Sports Shoes" 
+                         class="w-full h-full object-cover">
+                </div>
+                <div class="p-4">
+                    <h3 class="font-semibold text-gray-900 mb-1">Sports Shoes</h3>
+                    <p class="text-sm text-gray-600 mb-2">Lorem ipsum dolor sit</p>
+                    
+                    <!-- Rating -->
+                    <div class="flex items-center mb-3">
+                        <div class="flex text-yellow-400">
+                            <svg class="w-4 h-4 fill-current" viewBox="0 0 20 20">
+                                <path d="M10 15l-5.878 3.09 1.123-6.545L.489 6.91l6.572-.955L10 0l2.939 5.955 6.572.955-4.756 4.635 1.123 6.545z"/>
+                            </svg>
+                            <svg class="w-4 h-4 fill-current" viewBox="0 0 20 20">
+                                <path d="M10 15l-5.878 3.09 1.123-6.545L.489 6.91l6.572-.955L10 0l2.939 5.955 6.572.955-4.756 4.635 1.123 6.545z"/>
+                            </svg>
+                            <svg class="w-4 h-4 fill-current" viewBox="0 0 20 20">
+                                <path d="M10 15l-5.878 3.09 1.123-6.545L.489 6.91l6.572-.955L10 0l2.939 5.955 6.572.955-4.756 4.635 1.123 6.545z"/>
+                            </svg>
+                            <svg class="w-4 h-4 fill-current" viewBox="0 0 20 20">
+                                <path d="M10 15l-5.878 3.09 1.123-6.545L.489 6.91l6.572-.955L10 0l2.939 5.955 6.572.955-4.756 4.635 1.123 6.545z"/>
+                            </svg>
+                            <svg class="w-4 h-4 text-gray-300 fill-current" viewBox="0 0 20 20">
+                                <path d="M10 15l-5.878 3.09 1.123-6.545L.489 6.91l6.572-.955L10 0l2.939 5.955 6.572.955-4.756 4.635 1.123 6.545z"/>
+                            </svg>
+                        </div>
+                        <span class="text-sm text-gray-500 ml-2">(301)</span>
+                    </div>
+
+                    <!-- Price and Button -->
+                    <div class="flex items-center justify-between">
+                        <div class="flex items-center space-x-2">
+                            <span class="text-lg font-bold text-red-600">$69.99</span>
+                            <span class="text-sm text-gray-500 line-through">$129.99</span>
+                        </div>
+                        <button class="bg-black text-white px-4 py-2 rounded text-sm font-medium hover:bg-gray-800 transition-colors">
+                            Buy
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            
   </section>
 </body>
 
