--- a/index.html
+++ b/index.html
@@ -33,13 +33,16 @@
   </nav>
 
     <section class="w-full flex items-center h-[calc(100vh-80px)]">
-    <!-- Black overlay -->
+    
 
     <div class="w-1/3 h-full">
       <img src="/assets/banner1.jpg" alt="" class="w-full h-full object-cover" />
     </div>
     <div class="w-2/3 h-full relative">
+      <!-- Black overlay -->
       <div class="absolute inset-0 bg-black/50"></div>
+
+      <!-- image -->
       <img src="/assets/banner2.jpg" alt="" class="w-full h-full object-cover" />
 
       <div class="absolute inset-0 flex flex-col items-center justify-center text-center z-10 text-white px-4">
@@ -51,6 +54,7 @@
       </div>
   </section>
 
+  <!-- products -->
   <section class="px-10 grid grid-cols-4 gap-5 mt-20">
      <div class="bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden hover:shadow-md transition-shadow">
                 <div class="aspect-square  p-6">
@@ -98,6 +102,46 @@
             </div>
 
             
+  </section>
+
+  <!-- category section -->
+  <section class="my-20 px-10 grid grid-cols-4 gap-5">
+    <div class="h-[320px] w-[295px] rounded-[6px] relative">
+      <img src="/assets/category/1.jpg" alt="" class="h-full w-full rounded-[6px]">
+
+      <div class="px-[20px] absolute bottom-5 w-full">
+        <button class="bg-[#F2F0EA] w-full h-[40px] rounded-[3px]">Fashion</button>
+      </div>
+
+    </div>
+
+     <div class="h-[320px] w-[295px] rounded-[6px] relative">
+      <img src="/assets/category/1.jpg" alt="" class="h-full w-full rounded-[6px]">
+
+      <div class="px-[20px] absolute bottom-5 w-full">
+        <button class="bg-[#F2F0EA] w-full h-[40px] rounded-[3px]">Fashion</button>
+      </div>
+
+    </div>
+
+     <div class="h-[320px] w-[295px] rounded-[6px] relative">
+      <img src="/assets/category/1.jpg" alt="" class="h-full w-full rounded-[6px]">
+
+      <div class="px-[20px] absolute bottom-5 w-full">
+        <button class="bg-[#F2F0EA] w-full h-[40px] rounded-[3px]">Fashion</button>
+      </div>
+
+    </div>
+
+     <div class="h-[320px] w-[295px] rounded-[6px] relative">
+      <img src="/assets/category/1.jpg" alt="" class="h-full w-full rounded-[6px]">
+
+      <div class="px-[20px] absolute bottom-5 w-full">
+        <button class="bg-[#F2F0EA] w-full h-[40px] rounded-[3px]">Fashion</button>
+      </div>
+
+    </div>
+
   </section>
 </body>
 
